# chui

./: Cargo.toml  Cranky.toml  LICENSE  README.md  build_all.bat  build_all.sh  code review done.md  code review done.txt  code review.md  code review.txt  code_review_done.md  code_review_todo.md  game.txt
.cargo/: config.toml
.githooks/: pre-commit
.github/workflows/: nightlies.yml
crates/chui-console/: Cargo.toml  README.md
crates/chui-console/src/: main.rs
crates/chui-ui/: Cargo.toml  README.md
crates/chui-ui/assets/: default_board.xcf
crates/chui_core/: Cargo.toml  README.md
crates/chui_core/src/: lib.rs  modules.rs
crates/chui_core/src/modules/: engine.rs  fen.rs  move_generator.rs  piece.rs
crates/chui_core/src/modules/engine/: fen.rs  mod.rs
crates/chui_core/src/modules/parser/: mod.rs
crates/chui_macros/: Cargo.toml
crates/chui_macros/src/: lib.rs
crates/chui_ui/: Cargo.toml  README.md
crates/chui_ui/src/ui/: components.rs  resources.rs  utils.rs
crates/chui_ui/src/ui/plugins/: board.rs  debug.rs  mouse.rs  pieces.rs  ui_state.rs  window_descriptor.rs
crates/chui_ui/src/ui/plugins/egui_panels/layout_jobs/: file_menu.rs  opening_book_menu.rs  windows_menu.rs
crates/chui_ui/src/ui/plugins/egui_panels/top_menu/: engines.rs  file.rs
crates/coordinate-trainer/: Cargo.toml  README.md
crates/coordinate-trainer/src/: color.rs  coord.rs  grid.rs  lib.rs  main.rs
lib/: README.md
lib/chui_core/: Cargo.toml  README.md
lib/chui_core/benches/: array_bit_position.rs  bit_position.rs  bitset_position.rs  easy_1d_position.rs  easy_2d_position.rs  easy_position.rs  enum_position.rs  position.rs
lib/chui_core/src/: board.rs  chess_move.rs  command.rs  condition.rs  constants.rs  coordinate.rs  fen.rs  game.rs  lib.rs  modules.rs  move_generator.rs  parser.rs  piece.rs  position.rs  result.rs  traits.rs  util.rs  variant.rs
lib/chui_core/src/board/: bit_board.rs  easy_board.rs  tests.rs
lib/chui_core/src/board/tests/: test_bitmask_coords.rs  test_piece_coords.rs  test_standard_chess.rs
lib/chui_core/src/constants/: bitmask.rs  coord.rs
lib/chui_core/src/game/: commands.rs  fen.rs
lib/chui_core/src/modules/: board.rs  chess_move.rs  constants.rs  coord.rs  game.rs  mod.rs  move_generator.rs  parser.rs  piece.rs  player.rs  result.rs
lib/chui_core/src/modules/board/: mod.rs  result.rs
lib/chui_core/src/modules/board/tests/: mod.rs  test_piece_coords.rs  test_standard_chess.rs
lib/chui_core/src/modules/chess_move/: mod.rs
lib/chui_core/src/modules/command/: mod.rs
lib/chui_core/src/modules/constants/: mod.rs
lib/chui_core/src/modules/coord/: error.rs  mod.rs  result.rs
lib/chui_core/src/modules/engine/: commands.rs  fen.rs  mod.rs
lib/chui_core/src/modules/fen/: mod.rs
lib/chui_core/src/modules/game/: commands.rs  fen.rs  mod.rs
lib/chui_core/src/modules/move_generator/: mod.rs
lib/chui_core/src/modules/parser/: algebraic.rs  concise_reversible.rs  coordinate.rs  descriptive.rs  iccf.rs  mod.rs  reversible_algebraic.rs  smith.rs
lib/chui_core/src/modules/piece/: mod.rs
lib/chui_core/src/modules/player/: mod.rs
lib/chui_core/src/modules/traits/: mod.rs
lib/chui_core/src/parser/: algebraic.rs  concise_reversible.rs  coordinate.rs  descriptive.rs  iccf.rs  long_algebraic.rs  reversible_algebraic.rs  smith.rs
lib/chui_core/src/position/: array_bit_position.rs  bit_position.rs  bitset_position.rs  easy_1d_position.rs  easy_2d_position.rs  easy_position.rs  enum_position.rs
lib/chui_core/src/traits/: coordinate.rs  fen.rs  parser.rs  position.rs
lib/chui_core/tests/: init_engine.rs
lib/chui_error/: Cargo.toml
lib/chui_error/src/: lib.rs
lib/chui_macros/: Cargo.toml  README.md
lib/chui_macros/src/: lib.rs
lib/chui_ui/: Cargo.toml  README.md
lib/chui_ui/src/: lib.rs  macros.rs  ui.rs
lib/chui_ui/src/ui/: components.rs  constants.rs  events.rs  plugins.rs  resources.rs  states.rs  utils.rs
lib/chui_ui/src/ui/plugins/: assets.rs  board.rs  camera.rs  debug.rs  egui_panels.rs  game_state.rs  mouse.rs  pieces.rs  ui_state.rs  window_descriptor.rs
lib/chui_ui/src/ui/plugins/egui_panels/: top_menu.rs
lib/chui_ui/src/ui/plugins/egui_panels/layout_jobs/: commands_menu.rs  extras_menu.rs  levels_menu.rs
lib/chui_ui/src/ui/plugins/egui_panels/top_menu/: commands.rs  copy.rs  training.rs
src/: lib.rs  macros.rs  main.rs  modules.rs
src/modules/: board.rs  chess_move.rs  color.rs  command.rs  engine.rs  fen.rs  mod.rs  move_generator.rs  parser.rs  piece.rs  player.rs  result.rs  square.rs  ui.rs
src/modules/engine/: commands.rs  fen.rs
src/modules/parser/: algebraic.rs  concise_reversible.rs  coordinate.rs  descriptive.rs  iccf.rs  invalid.rs  long_algebraic.rs  mod.rs  reversible_algebraic.rs  smith.rs
src/modules/ui/: components.rs  constants.rs  events.rs  layout_jobs.rs  plugins.rs  resources.rs  states.rs  utils.rs
src/modules/ui/layout_jobs/: commands_menu.rs  design_menu.rs  mode_menu.rs
src/modules/ui/plugins/: assets.rs  board.rs  camera.rs  debug.rs  egui_panels.rs  game_state.rs  main_ui.rs  mouse.rs  pieces.rs  ui_state.rs  window_descriptor.rs
src/modules/ui/plugins/egui_panels/: layout_jobs.rs  top_menu.rs
src/modules/ui/plugins/egui_panels/layout_jobs/: commands_menu.rs  design_menu.rs  extras_menu.rs  file_menu.rs  levels_menu.rs  mode_menu.rs  opening_book_menu.rs  windows_menu.rs
src/modules/ui/plugins/egui_panels/top_menu/: commands.rs  copy.rs  cpu_vs_cpu.rs  design.rs  engines.rs  extras.rs  file.rs  help.rs  levels.rs  mode.rs  opening_book.rs  training.rs  windows.rs
src/modules/ui/plugins/main_ui/: top_menu.rs
src/modules/ui/plugins/main_ui/layout_jobs/: commands_menu.rs  extras_menu.rs  levels_menu.rs  opening_book_menu.rs  windows_menu.rs
src/modules/ui/plugins/main_ui/top_menu/: commands.rs  design.rs  training.rs
src/modules/ui/top_menu/: engines.rs  mode.rs  opening_book.rs  windows.rs
src/tests/: init_engine.rs
tests/: init_engine.rs  test1.rs
