[package]
name = "chui"
version = "0.1.0"
authors = ["Jonathan Sawyer <jonmsawyer@gmail.com>"]
edition = "2021"
rust-version = "1.71.0"
categories = ["command-line-utilities", "games", "parser-implementations", "parsing"]
description = "A chess UI or command line application that allows you to play against a human, a computer, or online."
readme = "README.md"
homepage = "https://chui.games/"
repository = "https://github.com/jonmsawyer/chui/"
license = "MIT OR Apache-2.0"
keywords = ["chess", "chess engine", "bevy", "chui", "chess ui", "chess user interface", "chess command line"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*", "bin/*"]
resolver = "2"
default-members = ["bin/chui-ui"]

[workspace.dependencies]
chui_core = { path = "lib/chui_core" }
chui_ui = { path = "lib/chui_ui" }
chui_macros = { path = "lib/chui_macros" }
chui_error = { path = "lib/chui_error" }
nonmax = "0.5"

[dependencies]
chui_core.workspace = true
chui_ui.workspace = true
chui_error.workspace = true
chui_macros.workspace = true


# Enable first level optimizations in debug mode
[profile.dev]
opt-level = 1
incremental = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
incremental = true
