[package]
name = "chui_macros"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Sawyer <jonmsawyer@gmail.com>"]
rust-version = "1.69.0"
categories = ["command-line-utilities", "games", "chess", "training"]
description = "A macros library for use within Chui."
readme = "README.md"
homepage = "https://chui.io/"
repository = "https://github.com/jonmsawyer/chui/tree/main/crates/chui_macros"
license = "MIT OR Apache-2.0"
keywords = ["chess", "chess trainer", "chui", "chess ui", "chess user interface", "chess command line"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true
