[package]
name = "chui_core"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Sawyer <jonmsawyer@gmail.com>"]
rust-version = "1.69.0"
categories = ["command-line-utilities", "games", "chess", "training"]
description = "A macros library for use within Chui."
readme = "README.md"
homepage = "https://chui.games/"
repository = "https://github.com/jonmsawyer/chui/tree/main/lib/chui_core"
license = "MIT OR Apache-2.0"
keywords = ["chess", "chess trainer", "chui", "chess ui", "chess user interface", "chess command line"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
nonmax = "0.5"
num-traits = "0.2"
