[package]
name = "chui_core"
version = "0.1.2"
edition = "2021"
authors = ["Jonathan Sawyer <jonmsawyer@gmail.com>"]
rust-version = "1.77.1"
categories = ["command-line-utilities", "games", "chess", "training"]
description = "The core library for all Chui applications."
readme = "README.md"
homepage = "https://chui.games/"
repository = "https://github.com/jonmsawyer/chui/tree/main/lib/chui_core"
license = "MIT OR Apache-2.0"
keywords = ["chess", "chess trainer", "chui", "chess ui", "chess user interface", "chess command line"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chui_macros.workspace = true
nonmax.workspace = true
thiserror = "1.0"
colored = "2"
rand = "0.8.5"
regex = "1.10"

[dev-dependencies]
chui_macros.workspace = true
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "position"
harness = false
