[package]
name = "chui_ui"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Sawyer <jonmsawyer@gmail.com>"]
rust-version = "1.71.0"
categories = ["command-line-utilities", "games", "chess", "training"]
description = "A macros library for use within Chui."
readme = "README.md"
homepage = "https://chui.games/"
repository = "https://github.com/jonmsawyer/chui/tree/main/lib/chui_ui"
license = "MIT OR Apache-2.0"
keywords = ["chess", "chess trainer", "chui", "chess ui", "chess user interface", "chess command line"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chui_core.workspace = true
chui_error.workspace = true
rand = { version = "0.8", features = ["small_rng"] }
bevy_egui = "0.20"
#bevy-inspector-egui = "0.12"
# Wait til bevy_editor_pls is in crates.io
#bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls" }
#bevy_asset_loader = { version = "0.13", features = ["2d"] }
#leafwing-input-manager = "0.6.1"

# See https://bevy-cheatbook.github.io/setup/bevy-config.html
[dependencies.bevy]
version = "0.10"
# Disable the default features if there are any that you do not want
default-features = false
features = [
  # Bevy functionality:
  "bevy_asset",         # Assets management
  "bevy_winit",         # Window management
  "x11",                # Linux: Support X11 windowing system
  "wayland",              # Linux: Support Wayland windowing system

  # Rendering
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_sprite",        # 2D (sprites) rendering
  "bevy_ui",            # Bevy UI
  "bevy_text",          # Bevy Text

  # File formats:
  "png",
]

